# automation-test

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.sisyphus/: boulder.json
.sisyphus/drafts/: automation-testing-tool.md
.sisyphus/evidence/: f2-code-quality-review-2026-04-01.txt  p2-task-T4-bootstrap-facts.json  p2-task-T4-first-run.txt  p2-task-T4-runtime-missing.txt  p2-task-T4-ui-automation-text.json  (+47 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_api_endpoint_query_params.sql  003_add_artifact_manifests.sql  004_add_suite_schedules.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/contracts/: commands.rs  domain.rs  dto.rs  errors.rs  events.rs  mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/models/: api_test_case.rs  data_table.rs  data_table_row.rs  environment.rs  environment_variable.rs  mod.rs
src-tauri/src/repositories/: api_repository.rs  data_table_repository.rs  environment_repository.rs  mod.rs  runner_repository.rs  ui_script_repository.rs
src-tauri/src/services/: api_execution_service.rs  artifact_service.rs  browser_automation_service.rs  ci_handoff_service.rs  environment_service.rs  mod.rs  runner_orchestration_service.rs  scheduler_service.rs  secret_service.rs
src-tauri/src/utils/: crypto.rs  mod.rs  paths.rs
src-tauri/tests/: ci_handoff_service_p2.rs  migrations.rs  scheduler_service_p2.rs
(+88 files in other folders)
